o Added diameter argument: circle(d), cylinder(d, d1, d2) and sphere(d)
o Added parent_module() and $parent_modules
o Added children() as a replacement for child()
o FIXME: Unicode support
o FIXME: Ranges with negative steps
o FIXME: Experimental concat()

Program Features:
o Added --info parameter to the cmd-line for system/library info
o Added --enable parameter to enable experimental features
o Added Reset View in GUI
o Added Feature tab in Preferences 

Bugfixes:
o polyhedron() is now much more robust handling almost planar polygons
o Automatic reloads of large designs are more robust
o Boolean logic in if() statements are now correctly short-circuited
o rands() with zero range caused an infinite loop
o resize(, auto=true) didn't work when shrinking objects
o The $children variable sometimes misbehaved due to dynamic scoping
o The --camera cmd-line option behaved differently then the corresponding GUI function
o PNG export now doesn't leak transparency settings into the target image
o Improved performance of OpenCSG (F5) compilation in some cases
o Some editor misbehaviors were fixed
o Stability fixes of CGAL-related crashes

Deprecations:
o child() is no longer supported. Use children() instead.
o polyhedron(triangles=[...]): Use polyhedron(faces=[...]) instead.

Misc:
o We now use CGAL's EPEC kernel
o Additional output formats: .ast, .term, null (these are most useful for testing)
o Test framework now shares more code with the GUI app
o Test report can now be automatically uploaded to dinkypage.com
o Better compatibility with BSD systems

OpenSCAD 2013.06
================

Language Features:
o linear_extrude now takes a scale parameter:
  linear_extrude(height=a, slices=b, twist=c, scale=[x,y])
o Recursive use of modules is now supported (including cascading child() operations):
  https://github.com/openscad/openscad/blob/master/examples/example024.scad
o Parameter list values can now depend on earlier values, e.g. for (i=[0:2], j=[0:i]) ..